--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -270,3 +270,30 @@
   year={2009},
   publisher={ACM}
 }
+@TechReport{FileAPI,
+  author={Ranganathan, A. and Sicking, J.},
+  title={{F}ile {API}},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/2006/webapi/FileAPI/}. Accessed 10-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{FileAPIWriter,
+  author={Uhrhane, E.},
+  title={{F}ile {API}: {W}riter},
+  month={May},
+  note={Available at: \url{http://dev.w3.org/2009/dap/file-system/file-writer.html}. Accessed 10-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{FileAPIDir,
+  author={Uhrhane, E.},
+  title={{F}ile {API}: {D}irectories and {S}ystem},
+  month={May},
+  note={Available at: \url{http://dev.w3.org/2009/dap/file-system/file-dir-sys.html}. Accessed 10-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
