--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -297,3 +297,21 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{WebRTC,
+  author={Bergkvist, A. and Burnett, D. C. and Jennings, C. and Narayanan, A.},
+  title={{W}eb{RTC} 1.0: {R}eal-time {C}ommunication {B}etween {B}rowsers},
+  month={Jan},
+  note={Available at: \url{http://dev.w3.org/2011/webrtc/editor/webrtc.html}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{getusermedia,
+  author={Burnett, D. C. and Narayanan, A.},
+  title={getusermedia: {G}etting access to local devices that can generate multimedia streams},
+  month={Dec},
+  note={Available at: \url{http://dev.w3.org/2011/webrtc/editor/getusermedia.html}. Accessed 11-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
