--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -315,3 +315,66 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{NavigationTiming,
+  author={Wang, Z.},
+  title={{N}avigation {T}iming},
+  month={Nov},
+  note={Available at: \url{http://www.w3c-test.org/webperf/specs/NavigationTiming/}. Accessed 11-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{ResourceTiming,
+  author={Mann, J. and Wang, Z. and Quach, A.},
+  title={{R}esource {T}iming},
+  month={Jan},
+  note={Available at: \url{http://www.w3c-test.org/webperf/specs/ResourceTiming/}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{UserTiming,
+  author={Mann, J. and Wang, Z. and Quach, A.},
+  title={{U}ser {T}iming},
+  month={Jan},
+  note={Available at: \url{http://dvcs.w3.org/hg/webperf/raw-file/tip/specs/UserTiming/Overview.html}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{PerformanceTimeline,
+  author={Mann, J. and Wang, Z.},
+  title={{P}erformance {T}imeline},
+  month={Jan},
+  note={Available at: \url{http://dvcs.w3.org/hg/webperf/raw-file/tip/specs/PerformanceTimeline/Overview.html}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{PageVisibility,
+  author={Mann, J. and Jain, A.},
+  title={{P}age {V}isibility},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/webperf/raw-file/tip/specs/PageVisibility/Overview.html}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{TimingControl,
+  author={Robinson, J. and McCormack, C.},
+  title={Timing control for script-based animations},
+  month={Jan},
+  note={Available at: \url{http://dvcs.w3.org/hg/webperf/raw-file/tip/specs/RequestAnimationFrame/Overview.html}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{ScriptYielding,
+  author={Mann, J. and Weber, J.},
+  title={{E}fficient {S}cript {Y}ielding},
+  month={Jul},
+  note={Available at: \url{http://dvcs.w3.org/hg/webperf/raw-file/tip/specs/setImmediate/Overview.html}. Accessed 11-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
