--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -378,3 +378,39 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{ServerSentEvents,
+  author={Hickson, I.},
+  title={{S}erver-{S}ent {E}vents},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/eventsource/}. Accessed 11-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{CORS,
+  author={van Kesteren, A.},
+  title={{C}ross-{O}rigin {R}esource {S}haring},
+  month={Dec},
+  note={Available at: \url{http://dvcs.w3.org/hg/cors/raw-file/tip/Overview.html}. Accessed 11-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{ContentSecurityPolicy,
+  author={Sterne, B. and Barth, A.},
+  title={{C}ontent {S}ecurity {P}olicy},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/content-security-policy/raw-file/tip/csp-specification.dev.html}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{FromOriginHeader,
+  author={van Kesteren, A.},
+  title={{T}he {F}rom-{O}rigin {H}eader},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/from-origin/raw-file/tip/Overview.html}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
