--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -414,3 +414,21 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{WebMessaging,
+  author={Hickson, I.},
+  title={{HTML}5 {W}eb {M}essaging},
+  month={Jan},
+  note={Available at: \url{http://dev.w3.org/html5/postmsg/}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{DeviceOrientation,
+  author={Block, S. and Popescu, A.},
+  title={{D}evice{O}rientation {E}vent {S}pecification},
+  month={Jul},
+  note={Available at: \url{http://dev.w3.org/geo/api/spec-source-orientation.html}. Accessed 12-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
