--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -432,3 +432,39 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{CSS3Selectors,
+  author={Çelik, T. and Etemad, E. J. and Glazman, D. and Hickson, I. and Linss, P. and Williams, J.},
+  title={{S}electors {L}evel 3},
+  month={Sep},
+  note={Available at: \url{http://www.w3.org/TR/selectors/}. Accessed 12-Febuary-2012},
+  year={2011},
+  type={{W3C} {R}ecommendation},
+  institution={W3C},
+}
+@TechReport{CSStransforms,
+  author={Fraser, S. and Jackson, D. and Hyatt, D. and Marrin, C. and O'Connor, E. and Schulze, D.},
+  title={{CSS} {T}ransforms},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/csswg/css3-transforms/}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{CSStransitions,
+  author={Jackson, D. and Hyatt, D. and Marrin, C. and Baron, L. D.},
+  title={{CSS} {T}ransitions},
+  month={Jan},
+  note={Available at: \url{http://dev.w3.org/csswg/css3-transitions/}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{CSSanimations,
+  author={Jackson, D. and Hyatt, D. and Marrin, C. and Galineau, S. and Baron, L. D.},
+  title={{CSS} {A}nimations},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/csswg/css3-animations/}. Accessed 12-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
