Add draft of research questions.

--- a/thesis/research-question.tex
+++ b/thesis/research-question.tex
@@ -1,2 +1,18 @@
-\chapter{Research Question: HTML5 - Hype versus Realities?}
+\chapter{Research Question [draft]}
 \label{chapter:research-question}
+
+Assuming that we know the reasons and motivation for cross-platform
+HTML5 and the importance of application performance and
+responsiveness:
+
+\begin{itemize}
+\item How should we build cross-platform HTML5 applications?
+
+  \begin{itemize}
+  \item How can we optimize the user interface performance?
+  \item How can we handle the flaky and slow mobile networks?
+  \item How can we handle different screen sizes and device types?
+  \end{itemize}
+\end{itemize}
+
+\noindent In other words, we know the Why, but what about the How?
