Add comment in conclusions.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -534,3 +534,7 @@ proxies. We did not change this because the query strings in the
 static assets were an essential part of our caching strategy.
 
 \section{Conclusions}
+
+\begin{itemize}
+\item go through research questions and provided answers
+\end{itemize}
