Add requirements comments.

--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -13,7 +13,17 @@ information and daily schedule for the conference.
 
 \subsection{Requirements}
 
-
+\begin{itemize}
+\item usage context: conference (network problems expected)
+\item target audience: mobile developers (knowledgeable audience)
+\item target devices: iPhone, Android phones, WP7, iPad (also tested
+  on more devices)
+\item personalized application: session favorites
+\item contextual UI: showing coming/ongoing favorite sessions, showing
+  current time in agenda, opening agenda in the current day
+\item floor maps with rooms
+\item session feedback form
+\end{itemize}
 
 \subsection{Application Architecture}
 
