Add todo comments in missing sections.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -883,24 +883,44 @@ notifications, fullscreen, mouse lock, clipboard, gamepad
 
 \subsection{Single-Page applications}
 
---
+\begin{itemize}
+\item simple REST backend as a dummy data layer
+\item all functionality in the client side
+\item application state in the frontend
+\item data persistency in the backend, frontend, or both
+\end{itemize}
 
 \subsubsection{JavaScript MVC Libraries}
 
---
+\begin{itemize}
+\item define MVC/MVVM etc. application patterns
+\item introduce example MVC libraries like backbone.js
+\end{itemize}
 
 \subsection{Responsive Design}
 
---
+\begin{itemize}
+\item scale UI to different screens
+\item use same code for mobile, tablets, and desktop
+\item media queries
+\end{itemize}
 
 \subsection{Progressive Enhancement}
 \label{subsection:progressive-enhancement}
 
---
+\begin{itemize}
+\item mobile first
+\item start from the bottom with the least capable devices
+\item build up extra enhancement functionality for more capable browsers
+\item use feature detection
+\end{itemize}
 
 \subsection{UI Libraries}
 
---
+\begin{itemize}
+\item introduce a few example frameworks/libraries for building mobile
+  web apps
+\end{itemize}
 
 \subsubsection{jQuery Mobile}
 
@@ -916,11 +936,13 @@ notifications, fullscreen, mouse lock, clipboard, gamepad
 
 \subsection{Hybrid Applications}
 
---
-
-\subsection{Wrapping Web Applications Application Stores}
-
---
+\begin{itemize}
+\item combining web apps with native technologies
+\item level of web/native functionality be pretty much anything
+\item end result is an installable native app with web tech in it
+\item introduce Phonegap as an example tool
+\item app can be uploaded to an app store
+\end{itemize}
 
 \clearpage
 \section{Performance Guidelines}
