Add list of other specs.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -870,7 +870,8 @@ element.
 
 \subsection{Other}
 
-notifications, fullscreen, mouse lock, clipboard, gamepad
+notifications, fullscreen, mouse lock, clipboard, gamepad, battery,
+vibration, network information, contacts, intents
 
 \section{Modern Mobile Web Application Architecture}
 \label{section:modern-mobile-web}
