Change citationneeded command.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -296,7 +296,7 @@
 % \abbr
 \newcommand{\abbr}[1] {#1 (?)}
 % \citationneeded
-\newcommand{\citationneeded} {(citation needed)}
+\newcommand{\citationneeded} {\ensuremath{^{[ \, citation \; needed \, ]}} }
 
 % Other stuff
 % ------------------------------------------------------------------
